// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputNumber center demo works fine 1`] = `
<div>
  <div
    class="t-input-number t-size-m"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M224 470.39872H800V553.59872H224V470.39872Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        autocomplete="off"
        class="t-input__inner t-input-number-text-align"
        placeholder=""
        ref="refInputElem"
      />
    </div>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`InputNumber defaultDemo demo works fine 1`] = `
<div>
  <div
    class="t-input-number t-size-m"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M224 470.39872H800V553.59872H224V470.39872Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        autocomplete="off"
        class="t-input__inner t-input-number-text-align"
        placeholder=""
        ref="refInputElem"
      />
    </div>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`InputNumber disabled demo works fine 1`] = `
<div>
  <div
    class="t-input-number t-size-m t-is-disabled"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease t-is-disabled"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M224 470.39872H800V553.59872H224V470.39872Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        autocomplete="off"
        class="t-input__inner t-is-disabled t-input-number-text-align"
        disabled="disabled"
        placeholder=""
        ref="refInputElem"
      />
    </div>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase t-is-disabled"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`InputNumber format demo works fine 1`] = `
<div>
  <div
    class="t-input-number t-size-m"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M224 470.39872H800V553.59872H224V470.39872Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        autocomplete="off"
        class="t-input__inner t-input-number-text-align"
        placeholder=""
        ref="refInputElem"
      />
    </div>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`InputNumber left demo works fine 1`] = `
<div>
  <div
    class="t-input-number t-size-m t-is-controls-right"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
      type="button"
    >
      <svg
        class="t-icon t-icon-chevron-down t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M226.57792 413.41696L285.40928 354.58624 511.9936 581.17056 738.5792 354.58624 797.408 413.41696 511.9936 698.8352 226.57792 413.41696Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        autocomplete="off"
        class="t-input__inner"
        placeholder=""
        ref="refInputElem"
      />
    </div>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
      type="button"
    >
      <svg
        class="t-icon t-icon-chevron-up t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M797.408 610.60864L738.5792 669.44 511.9936 442.85568 285.40928 669.44 226.57792 610.60864 511.9936 325.19296 797.408 610.60864Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`InputNumber size demo works fine 1`] = `
<div>
  <div
    class="t-input-number t-size-s"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-s"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M224 470.39872H800V553.59872H224V470.39872Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        autocomplete="off"
        class="t-input__inner t-input-number-text-align"
        placeholder=""
        ref="refInputElem"
      />
    </div>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-s"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
        />
      </svg>
    </button>
  </div>
   
  <div
    class="t-input-number t-size-m"
    style="margin: 0px 50px;"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M224 470.39872H800V553.59872H224V470.39872Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        autocomplete="off"
        class="t-input__inner t-input-number-text-align"
        placeholder=""
        ref="refInputElem"
      />
    </div>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
        />
      </svg>
    </button>
  </div>
   
  <div
    class="t-input-number t-size-l"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-l"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M224 470.39872H800V553.59872H224V470.39872Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        autocomplete="off"
        class="t-input__inner t-input-number-text-align"
        placeholder=""
        ref="refInputElem"
      />
    </div>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-l"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`InputNumber step demo works fine 1`] = `
<div>
  <div
    class="t-input-number t-size-m"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M224 470.39872H800V553.59872H224V470.39872Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        autocomplete="off"
        class="t-input__inner t-input-number-text-align"
        placeholder=""
        ref="refInputElem"
      />
    </div>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`InputNumber undefined demo works fine 1`] = `
<div>
  <div
    class="t-input-number t-size-m"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__decrease"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M224 470.39872H800V553.59872H224V470.39872Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        autocomplete="off"
        class="t-input__inner t-input-number-text-align"
        placeholder="输入"
        ref="refInputElem"
      />
    </div>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-button--shape-square t-input-number__increase"
      type="button"
    >
      <svg
        class="t-icon t-icon-add t-size-m"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
        />
      </svg>
    </button>
  </div>
</div>
`;
